--- a/BackPortal/SupportingFiles/Info.plist
+++ b/BackPortal/SupportingFiles/Info.plist
@@ -22,6 +22,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This data is not used</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>This data is not used</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>This data is not used</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This data is not used</string>
+	<key>NSMotionUsageDescription</key>
+	<string>This data is not used</string>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch</string>
 	<key>UIMainStoryboardFile~ipad</key>
